# creator-live

./: .gitignore  CMakeLists.txt  README.txt  copyrights.html  live.pro  test.txt
3rd-calf/: CMakeLists.txt  audio_fx.h  calf_dotlive.cpp  custom_ctl.h  fjapp.cpp  fjapp.h  fjfilterapp.cpp  fjfilterframe.cpp  fjfilterframe.h  fjfilterframe.ui  fjflangerapp.cpp  fjflangerapp.h  fjflangerframe.cpp  fjflangerframe.h  fjflangerframe.ui  fjphaserapp.h  fjphaserframe.cpp  fjphaserframe.h  fjphaserframe.ui  fjreverbapp.cpp  fjreverbapp.h  fjreverbframe.cpp  fjreverbframe.h  fjreverbframe.ui  giface.cpp  ladspa_wrap.h  lv2helpers.h  lv2wrap.h  main_win.h  modules.cpp  modules_dev.h  modules_dsp.cpp  modules_small.h  modules_synths.h  osc.h  osctl.h  osctlnet.h  preset_gui.h  primitives.h  synth.h  (+1 more)
3rd-fluidsynth/: CMakeLists.txt  a.sh  config.status  fluidsynth.pc  libtool
3rd-fluidsynth/src/: config.h  fluid_lash.c  fluidsynth_priv.h  libfluidsynth.la  libfluidsynth_la-fluid_adriver.lo  libfluidsynth_la-fluid_aufile.lo  libfluidsynth_la-fluid_chan.lo  libfluidsynth_la-fluid_chorus.lo  libfluidsynth_la-fluid_cmd.lo  libfluidsynth_la-fluid_conv.lo  libfluidsynth_la-fluid_defsfont.lo  libfluidsynth_la-fluid_dsp_float.lo  libfluidsynth_la-fluid_event.lo  libfluidsynth_la-fluid_gen.lo  libfluidsynth_la-fluid_hash.lo  libfluidsynth_la-fluid_io.lo  libfluidsynth_la-fluid_ladspa.lo  libfluidsynth_la-fluid_list.lo  libfluidsynth_la-fluid_mdriver.lo  (+13 more)
3rd-soundtouch/: CMakeLists.txt
app-bpm/: CMakeLists.txt  bpm_dotlive.cpp  bpm_icons.qrc  bpmapp.cpp  bpmapp.h  bpmframe.cpp  bpmframe.h  bpmframe.ui
app-calf/: fjapp.h  (+36 more)
app-mixer/: CMakeLists.txt  mixer.qrc  mixer_dotlive.cpp  mixerapp.cpp  mixerapp.h  mixerframe.cpp  mixerframe.h  mixerframe.ui
app-pitch/: CMakeLists.txt  pitch_dotlive.cpp  pitch_icons.qrc  pitchapp.cpp  pitchapp.h  pitchapp_p.h  pitchframe.cpp  pitchframe.h  pitchframe.ui
app-sampler/: CMakeLists.txt  sampler_dotlive.cpp  sampler_icons.qrc  samplerapp.cpp  samplerapp.h  samplerframe.cpp  samplerframe.h  samplerframe.ui
app-sequencer/: CMakeLists.txt  app-sequencer.pro  looperapp.cpp  looperapp.h  looperframe.cpp  looperframe.h  looperframe.ui  seq_dotlive.cpp  sequencer.qrc  sequencerapp.cpp  sequencerapp.h  sequencerframe.cpp  sequencerframe.h  sequencerframe.ui  sequencergraph.cpp  sequencergraph.h  sequencersys.cpp  sequencersys.h
bridge/: CMakeLists.txt  bridge.pro  bridgesettings.cpp  bridgesettings.h  bridgesettings.ui  lite.qrc  main.cpp
context-dj/: CMakeLists.txt  collectioncontext.cpp  collectioncontext.h  collectioncontext.ui  djcontext.cpp  djcontext.h  djcontext.ui  effectstab.cpp  effectstab.h  effectstab.ui  livebar.cpp  livebar.h  livebar.ui  samplerdj.cpp  samplerdj.h  sampletab.cpp  sampletab.h  sampletab.ui  tracktab.cpp  tracktab.h  tracktab.ui
creator-live/: CMakeLists.txt  ambition.cpp  ambition.h  app_dotlive.cpp  audiooutputchooser.cpp  audiooutputchooser.h  audiooutputchooser.ui  creator-live.pro  insertApp.qml  insertapp.cpp  insertapp.h  insertbutton.cpp  insertbutton.h  liveapplication.cpp  liveapplication.h  liveset.xcf  livewindow.cpp  livewindow.h  livewindow.ui  main.cpp  midioutputchooser.cpp  midioutputchooser.h  midioutputchooser.ui  notready.xcf  programs.qrc  programs.txt  settingslinux.cpp  settingslinux.h  settingslinux.ui  settingstabwidget.cpp  settingstabwidget.h  settingstabwidget.ui  track.cpp  track.h  trackgroup.cpp  trackgroup.h  trackgroupaudio.cpp  trackgroupaudio.h  trackgroupmidi.cpp  trackgroupmidi.h  (+2 more)
launcher/: CMakeLists.txt  audiosettingswidget.cpp  audiosettingswidget.h  audiosettingswidget.ui  channel.txt  main.cpp  mainw.cpp  mainw.h  mainw.ui  resource.qrc  welcome.xcf
liblivecore/: CMakeLists.txt  ambition.cpp  anabeat.cpp  app.cpp  appinterface.cpp  asyncconnect.cpp  asyncconnect_p.h  audio.cpp  audio_qnx.cpp  audiograph.cpp  audiointerface.cpp  audiosecond.cpp  audiosystem_p.h  audiosystem_qnx_p.h  audiotrack.cpp  chord.cpp  core_dotlive.cpp  instrument.cpp  instrumentinterface.cpp  keysignature.cpp  liblivecore.pro  mapping.cpp  metronome.cpp  midi.cpp  midibinding.cpp  midibridge.cpp  midibridge.h  midievent.cpp  midieventcounter.cpp  midifilter.cpp  midiqnx.cpp  midisystem_p.h  miditrack.cpp  modeinterface.cpp  nframebuffer.cpp  object.cpp  pitch.cpp  songsystem.cpp  time.cpp  timesignature.cpp  (+1 more)
liblivewidgets/: CMakeLists.txt  appframe.cpp  bindableparent.cpp  chaintypewidget.cpp  combobox.cpp  draglabel.cpp  draglistframe.cpp  dropframe.cpp  inputdragwidget.ui  introwizard.cpp  introwizard.ui  iodragwidget.cpp  liblivewidgets.pro  metrospinbox.cpp  midibindingqt.cpp  newinput.cpp  newinput.ui  objectchooser.cpp  pianokey.cpp  pushbutton.cpp  rotatedlabel.cpp  slider.cpp  spinbox.cpp  toolbutton.cpp  track.cpp  trackhint.cpp  trackhint.ui  trackinputselect.cpp  trackinputselect.ui  trackinputwidget.cpp  trackinputwidget.ui
livemidi/: CMakeLists.txt  livemidi.pro  midiplugin.cpp  midiplugin.h  midiwizard.cpp  midiwizard.h  midiwizard.ui
livesf2/: CMakeLists.txt  livesf2.pro  livesf2_global.h  livesf2wizard.cpp  livesf2wizard.h  livesf2wizard.ui  sf2interface.cpp  sf2interface.h  soundfont.cpp  soundfont.h
livevst/: CMakeLists.txt  hackwidget.h  icons.qrc  livevst.pro  vst.h  vstWin.cpp  vst_dotlive.cpp  vst_p.h  vstinterface.cpp  vstinterface.h  vstlinux.cpp  vstlinux_p.h  vstselectionwidget.cpp  vstselectionwidget.h  vstselectionwidget.ui  vstsettingswidget.cpp  vstsettingswidget.h  vstsettingswidget.ui  vstsidekick.h  vstwizard.cpp  vstwizard.h  vstwizard.ui
mode-dj/: CMakeLists.txt  collectioncontext.cpp  collectioncontext.h  collectioncontext.ui  djcontext.cpp  djcontext.h  djcontext.ui  effectstab.cpp  effectstab.h  effectstab.ui  livebar.cpp  livebar.h  livebar.ui  samplerdj.cpp  samplerdj.h  sampletab.cpp  sampletab.h  tracktab.cpp  tracktab.h  tracktab.ui
pluginTester/: CMakeLists.txt  apptester.cpp  apptester.h  apptester.ui  instrumenttester.cpp  instrumenttester.h  instrumenttester.ui  lite.qrc  main.cpp  pluginTester.pro  styleSheet.txt
test/: CMakeLists.txt  liblivecore.cpp
(+178 files in other folders)
